# docker_demo

./: Dockerfile  app.py  pyproject.toml
