[tool.poetry]
name = "docker-demo"
version = "0.1.0"
description = ""
authors = ["Marcus Bragion <viniciusbragion@outlook.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
